@@ -299,6 +299,7 @@
                         --add-exports javafx.graphics/com.sun.javafx.tk=com.bitifyware.codearea
                         --add-exports javafx.graphics/com.sun.javafx.scene.input=com.bitifyware.codearea
                         --add-exports javafx.graphics/com.sun.javafx.scene.text=com.bitifyware.codearea
+                        --add-exports javafx.graphics/com.sun.javafx.scene=com.bitifyware.codearea
                         --add-exports javafx.graphics/com.sun.javafx.geom=com.bitifyware.codearea
                         --add-exports javafx.base/com.sun.javafx=com.bitifyware.codearea
                         --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
